Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.1.0-beta
-
None
-
1111c06aaccef2cad1d136b38c8c1ab48d0a5ddd
Description
This leads to unexpected state changes and error messages in the QML profiler.
Attachments
For Gerrit Dashboard: QTCREATORBUG-11760 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
81193,3 | Android: notify qml profiler when app is stopped | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |