src/plugins/android/androidanalyzesupport.h
@@ -56,6 +56,7 @@ public:
 private slots:
     void handleRemoteProcessStarted(int qmlPort);
 
+    void handleRemoteProcessFinished(const QString &errorMsg);
     void handleRemoteOutput(const QByteArray &output);
     void handleRemoteErrorOutput(const QByteArray &output);
 
